--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
         "nodemon": "^2.0.20"
     },
     "scripts": {
-        "start": "nodemon --experimental-modules --es-module-specifier-resolution=node server.js",
+        "start": "node --experimental-modules --es-module-specifier-resolution=node server.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     }
 }
