change config file vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -3,14 +3,14 @@
     "name": "ak-tracuusaubenh",
     "builds": [
         {
-            "src": "server.js",
-            "use": "@now/node"
+            "src": "./server.js",
+            "use": "@vercel/node"
         }
     ],
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "server.js"
+            "dest": "/"
         }
     ]
 }
