config to deploy

--- a/package.json
+++ b/package.json
@@ -21,6 +21,6 @@
         "nodemon": "^2.0.20"
     },
     "scripts": {
-        "start": "node --experimental-modules --es-module-specifier-resolution=node index.js"
+        "start": "nodemon index.js"
     }
 }
