--- a/vercel.json
+++ b/vercel.json
@@ -3,14 +3,14 @@
     "name": "ak-tracuusaubenh",
     "builds": [
         {
-            "src": "./index.js",
+            "src": "index.js",
             "use": "@vercel/node"
         }
     ],
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "/"
+            "dest": "index.js"
         }
     ]
 }
