--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
     "main": "index.js",
     "license": "MIT",
     "type": "module",
+    "engines": {
+        "node": "14.x"
+    },
     "dependencies": {
         "assert": "^2.0.0",
         "bcrypt": "^5.1.0",
